--- a/api/.env
+++ b/api/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:55432/scannerbot_dev?schema=public"
+JWT_SECRET=test
