--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^5.2.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
