feat: add scan creation by CLI

--- a/api/.env
+++ b/api/.env
@@ -3,6 +3,6 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
+PROJECT_URL=http://localhost:3000
 DATABASE_URL="postgresql://postgres:postgres@localhost:55432/scannerbot_dev?schema=public"
 JWT_SECRET=test
