--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^5.2.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "fs-extra": "^11.1.1",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -40,6 +41,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^11.0.2",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
     "@types/passport-jwt": "^3.0.9",
