--- a/webapp/package.json
+++ b/webapp/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.15.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "yup": "^1.2.0"
@@ -42,6 +43,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
