--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "fs-extra": "^11.1.1",
+    "openai": "^4.11.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
