--- a/cli/package.json
+++ b/cli/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@scannerbot/cli",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "ScannerBOT CLI",
-  "bin": "main.js",
-  "author": "StrandGeek",
+  "bin": "index.js",
+  "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.5.1",
