--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -3,7 +3,7 @@ FROM node:18-alpine3.17 as build
 WORKDIR /app
 COPY . /app
 
-RUN npm install
+RUN npm ci --verbosse
 RUN npm run build
 
 FROM nginx:alpine
