--- a/api/package.json
+++ b/api/package.json
@@ -34,7 +34,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "stripe": "^14.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
